# NeuraSys-Hybrid

./: README.md  clean.sh  dependency-reduced-pom.xml  manifest.json  pom.xml
01_Java_Source/com/neurasys/: Main.java
01_Java_Source/com/neurasys/bridge/: JniHarness.java  NativeFileMonitor.java
01_Java_Source/com/neurasys/controller/: MainController.java
01_Java_Source/com/neurasys/model/: BackupStats.java  FileEvent.java  FileVersion.java  MonitorConfig.java
01_Java_Source/com/neurasys/monitor/: OneDriveMonitor.java  PollingFileMonitor.java
01_Java_Source/com/neurasys/service/: BackupManager.java  CompressionService.java  DatabaseManager.java  MultiPathMonitor.java  OneDriveService.java
01_Java_Source/com/neurasys/util/: FileUtil.java  Logger.java  SpaceOptimizer.java
02_C_Source/Windows/: CMakeLists.txt  FileMonitor.c  FileMonitor.h
03_SQL_Database/: neurasys_sample_queries.sql  neurasys_schema.sql  neurasys_stored_procedures.sql
04_JavaFX_UI/css/: application.css
04_JavaFX_UI/fxml/: main.fxml
05_Configuration/: README.md  application.properties
06_Build_Scripts/: README.md  build-all.bat  build-all.sh  clean.bat  clean.sh
bots/: logBot.deluge
commands/: configFilter.deluge  toggleFilter.deluge
services/: logFilter.deluge  logScorer.deluge  webhookHandler.deluge
src/main/resources/css/: application.css
src/main/resources/fxml/: main.fxml
test/: runLocalTest.js  sampleLogs.txt
utils/: maskSensitive.deluge  rateLimiter.deluge
